# embedded_praktikum

./: .gitignore
embedded/: CMakeLists.txt  embedded.c  encoder.c  encoder.h  lcd.c  lcd.h  led.c  led.h  rfm69c.c  rfm69c.h  spi.c  spi.h
